--- a/Admin.html
+++ b/Admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>CSEO - Administration</title>
     <link rel="stylesheet" href="styles/Admin.css">
-    <link rel="icon" type="image/icon" href="Images/Icon.ico" />
+    <link rel="icon" type="image/icon" href="assets/Icon.ico" />
     <link rel="stylesheet" href="admin_assets/web/assets/mobirise-icons/mobirise-icons.css">
     <link rel="stylesheet" href="admin_assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="admin_assets/socicon/css/styles.css">
@@ -27,7 +27,7 @@
     <div class="hidden" style="display: none;">
         <header>
             <div class="topbar">
-                <a href="Home.html"><img src="Images/Loop.gif" class="toplogo"></a>
+                <a href="Home.html"><img src="assets/Loop.gif" class="toplogo"></a>
                 <a href="Register.html" class="RegisterButton"><span class="RegisterButton"></span>Register</a>
                 <a href="Competitive.html" class="CompetitiveButton"><span
                         class="CompetitiveButton"></span>Competitive</a>
@@ -70,12 +70,16 @@
                 <div style="width: 70%;" class="text">
                     <h4 style="font-size: 20px;">
                         <i>
-                        For those who were with us in previous years, we are pleased to see you again – for those who
-                        join the NOEC for the first time, we hope that your season will be enjoyable and that you will
-                        be with us for several years.
+                            For those who were with us in previous years, we are pleased to see you again – for those
+                            who
+                            join the NOEC for the first time, we hope that your season will be enjoyable and that you
+                            will
+                            be with us for several years.
 
-                        Promote the game of soccer while providing participants with the same opportunity to play and
-                        thrive in an atmosphere of fun, good sportsmanship and respect</i> </h4> <br />
+                            Promote the game of soccer while providing participants with the same opportunity to play
+                            and
+                            thrive in an atmosphere of fun, good sportsmanship and respect</i>
+                    </h4> <br />
 
                     <h3>CODES OF CONDUCT</h3>
                     <h4>
@@ -140,7 +144,9 @@
                         Nabil can decide to cancel a game on the field.
                         <br />
                         When the temperature at any time of the day of the game exceeds 30 degrees Celsius according to
-                        what is posted on the <a href="http://www.meteo.gc.ca/city/pages/on-118_metric_f.html">Environment Canada website</a>.
+                        what is posted on the <a
+                            href="http://www.meteo.gc.ca/city/pages/on-118_metric_f.html">Environment Canada
+                            website</a>.
                     </h4> <br />
 
                     <h3>HOW IT WORKS</h3>
