--- a/Photos.html
+++ b/Photos.html
@@ -31,7 +31,7 @@
 
     <header>
       <div class="topbar">
-        <a href="Home.html"><img src="Images/Loop.gif" class="toplogo"></a>
+        <a href="Home.html"><img src="assets/Loop.gif" class="toplogo"></a>
         <a href="Inscription.html" class="RegisterButton"><span class="RegisterButton"></span>Inscription</a>
         <a href="Compétitive.html" class="CompetitiveButton"><span class="CompetitiveButton"></span>Compétitive</a>
         <a href="Administration.html" class="AdminButton"><span class="AdminButton"></span>Administration</a>
