--- a/Pictures.html
+++ b/Pictures.html
@@ -31,7 +31,7 @@
 
     <header>
       <div class="topbar">
-        <a href="Home.html"><img src="Images/Loop.gif" class="toplogo"></a>
+        <a href="Home.html"><img src="assets/Loop.gif" class="toplogo"></a>
         <a href="Register.html" class="RegisterButton"><span class="RegisterButton"></span>Register</a>
         <a href="Competitive.html" class="CompetitiveButton"><span class="CompetitiveButton"></span>Competitive</a>
         <a href="Admin.html" class="AdminButton"><span class="AdminButton"></span>Administration</a>
@@ -253,49 +253,54 @@
 
 
       <section once="" class="cid-rpDDwidVQb" id="footer7-4">
-          <div class="container">
-              <div class="media-container-row align-center mbr-white">
-                  <div class="row row-links">
-                      <ul class="foot-menu">
-                          <li class="foot-menu-item mbr-fonts-style display-7"><a href="Home.html" style="color: white;"><strong>Home</strong></a></li>
-                          <li class="foot-menu-item mbr-fonts-style display-7"><a href="Register.html" style="color: white;"><strong>Register</strong></a></li>
-                          <li class="foot-menu-item mbr-fonts-style display-7"><a href="Competitive.html" style="color: white;"><strong>Competitive</strong></a></li>
-                          <li class="foot-menu-item mbr-fonts-style display-7"><a href="Admin.html" style="color: white;"><strong>Administration</strong></a></li>
-                          <li class="foot-menu-item mbr-fonts-style display-7"><a href="Pictures.html" style="color: white;"><strong>Photos</strong></a></li>
-                      </ul>
-                  </div>
-                  <div class="row social-row">
-                      <div class="social-list align-right pb-2">
-                          <div class="soc-item">
-                              <a href="https://twitter.com/Nabcha62" target="_blank">
-                                  <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
-                              </a>
-                          </div>
-                          <div class="soc-item">
-                              <a href="https://www.google.com/maps/place/697+Brome+Crescent,+Orl%C3%A9ans,+ON+K4A+1W2/@45.4829479,-75.4896209,17z/data=!3m1!4b1!4m5!3m4!1s0x4cce13c7cc7f3801:0x920e0373cb365a31!8m2!3d45.4829442!4d-75.4874322?shorturl=1"
-                                  target="_blank">
-                                  <span class="mbr-iconfont mbr-iconfont-social mbri-map-pin"></span>
-                              </a>
-                          </div>
-                          <div class="soc-item">
-                              <a href="tel:6133230758">
-                                  <span class="mbr-iconfont mbr-iconfont-social mbri-mobile"></span>
-                              </a>
-                          </div>
-                          <div class="soc-item">
-                              <a href="mailto:etoilesdorleans@gmail.com">
-                                  <span class="mbr-iconfont mbr-iconfont-social mbri-letter"></span>
-                              </a>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="row row-copirayt">
-                      <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                          © Copyright 2019 CSEO - All Rights Reserved
-                      </p>
-                  </div>
+        <div class="container">
+          <div class="media-container-row align-center mbr-white">
+            <div class="row row-links">
+              <ul class="foot-menu">
+                <li class="foot-menu-item mbr-fonts-style display-7"><a href="Home.html"
+                    style="color: white;"><strong>Home</strong></a></li>
+                <li class="foot-menu-item mbr-fonts-style display-7"><a href="Register.html"
+                    style="color: white;"><strong>Register</strong></a></li>
+                <li class="foot-menu-item mbr-fonts-style display-7"><a href="Competitive.html"
+                    style="color: white;"><strong>Competitive</strong></a></li>
+                <li class="foot-menu-item mbr-fonts-style display-7"><a href="Admin.html"
+                    style="color: white;"><strong>Administration</strong></a></li>
+                <li class="foot-menu-item mbr-fonts-style display-7"><a href="Pictures.html"
+                    style="color: white;"><strong>Photos</strong></a></li>
+              </ul>
+            </div>
+            <div class="row social-row">
+              <div class="social-list align-right pb-2">
+                <div class="soc-item">
+                  <a href="https://twitter.com/Nabcha62" target="_blank">
+                    <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
+                  </a>
+                </div>
+                <div class="soc-item">
+                  <a href="https://www.google.com/maps/place/697+Brome+Crescent,+Orl%C3%A9ans,+ON+K4A+1W2/@45.4829479,-75.4896209,17z/data=!3m1!4b1!4m5!3m4!1s0x4cce13c7cc7f3801:0x920e0373cb365a31!8m2!3d45.4829442!4d-75.4874322?shorturl=1"
+                    target="_blank">
+                    <span class="mbr-iconfont mbr-iconfont-social mbri-map-pin"></span>
+                  </a>
+                </div>
+                <div class="soc-item">
+                  <a href="tel:6133230758">
+                    <span class="mbr-iconfont mbr-iconfont-social mbri-mobile"></span>
+                  </a>
+                </div>
+                <div class="soc-item">
+                  <a href="mailto:etoilesdorleans@gmail.com">
+                    <span class="mbr-iconfont mbr-iconfont-social mbri-letter"></span>
+                  </a>
+                </div>
               </div>
+            </div>
+            <div class="row row-copirayt">
+              <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
+                © Copyright 2019 CSEO - All Rights Reserved
+              </p>
+            </div>
           </div>
+        </div>
       </section>
 
       <script src="photos_assets/web/assets/jquery/jquery.min.js"></script>
