--- a/Register.html
+++ b/Register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>CSEO - Register</title>
     <link rel="stylesheet" href="styles/Register.css">
-    <link rel="icon" type="image/icon" href="Images/Icon.ico" />
+    <link rel="icon" type="image/icon" href="assets/Icon.ico" />
     <link rel="stylesheet" href="register_assets/web/assets/mobirise-icons/mobirise-icons.css">
     <link rel="stylesheet" href="register_assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="register_assets/socicon/css/styles.css">
@@ -27,7 +27,7 @@
     <div class="hidden" style="display: none;">
         <header>
             <div class="topbar">
-                <a href="Home.html"><img src="Images/Loop.gif" class="toplogo"></a>
+                <a href="Home.html"><img src="assets/Loop.gif" class="toplogo"></a>
                 <a href="Register.html" class="RegisterButton"><span class="RegisterButton"></span>Register</a>
                 <a href="Competitive.html" class="CompetitiveButton"><span
                         class="CompetitiveButton"></span>Competitive</a>
@@ -318,7 +318,8 @@
                                         <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Mail</h4>
                                         <p class="mbr-content-text mbr-fonts-style display-7">
                                             Send your check by mail to the following adresse: 697 Brome Crescent
-                                            <br>Orléans, ON K4A 1W2.&nbsp;Checks are payable to “C.S.E.O.”</p>
+                                            <br>Orléans, ON K4A 1W2.&nbsp;Checks are payable to “C.S.E.O.”
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -334,7 +335,8 @@
                                             for a mailing service, you can schedule a time with our administration and
                                             deliver it yourself to the following
                                             adresse: 697 Brome Crescent
-                                            <br>Orléans, ON K4A 1W2</p>
+                                            <br>Orléans, ON K4A 1W2
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -486,7 +488,7 @@
                                             var n = 5;
                                             var val = this.selectedIndex;
                                             if ((this.selectedIndex < ($(this).find('option').length - n)) && (
-                                                    this
+                                                this
                                                     .selectedIndex > n)) {
                                                 this.selectedIndex += n;
                                                 this.selectedIndex -= (2 * n);
@@ -501,7 +503,7 @@
                                             var n = 5;
                                             var val = this.selectedIndex;
                                             if ((this.selectedIndex < ($(this).find('option').length - n)) && (
-                                                    this
+                                                this
                                                     .selectedIndex > n)) {
                                                 this.selectedIndex += n;
                                                 this.selectedIndex -= (2 * n);
@@ -661,7 +663,7 @@
                                     </div>
                                 </label>
 
-                                <img src="Images/soccer_field.jpg" width="300px" height="auto"
+                                <img src="assets/soccer_field.jpg" width="300px" height="auto"
                                     style="padding: 0px 10px 10px 10px">
                             </div>
                             <br />
@@ -846,7 +848,7 @@
                                             PostPreferedPositions: PreferedPositions,
                                             PostCompetitive: Competitive
                                         },
-                                        success: function (res) {}
+                                        success: function (res) { }
                                     });
                                 };
                             </script>
@@ -875,7 +877,9 @@
                 <div class="container">
                     <div class="row justify-content-center content-row">
                         <div class="media-container-column title col-12 col-lg-7 col-md-6">
-                            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5">If your child has medical conditions, you have to print and fill out this form. You have until the
+                            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5">If your
+                                child has medical conditions, you have to print and fill out this form. You have until
+                                the
                                 second week after the season starts to give this back</h3>
 
                         </div>
