--- a/Competitive.html
+++ b/Competitive.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>CSEO - Competitive</title>
     <link rel="stylesheet" href="styles/Competitive.css">
-    <link rel="icon" type="image/icon" href="Images/Icon.ico" />
+    <link rel="icon" type="image/icon" href="assets/Icon.ico" />
     <link rel="stylesheet" href="register_assets/web/assets/mobirise-icons/mobirise-icons.css">
     <link rel="stylesheet" href="register_assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="register_assets/socicon/css/styles.css">
@@ -27,7 +27,7 @@
     <div class="hidden" style="display: none;">
         <header>
             <div class="topbar">
-                <a href="Home.html"><img src="Images/Loop.gif" class="toplogo"></a>
+                <a href="Home.html"><img src="assets/Loop.gif" class="toplogo"></a>
                 <a href="Register.html" class="RegisterButton"><span class="RegisterButton"></span>Register</a>
                 <a href="Competitive.html" class="CompetitiveButton"><span
                         class="CompetitiveButton"></span>Competitive</a>
@@ -158,7 +158,8 @@
                             </div>
                         </th>
                         <th style="padding: 0px 50px 0px 50px;">
-                            <img src="Images/20181215_110510-1024x768.jpg" width="700px"> </th>
+                            <img src="assets/20181215_110510-1024x768.jpg" width="700px">
+                        </th>
                     </tr>
                 </table>
             </section>
